--- a/Pipfile
+++ b/Pipfile
@@ -10,21 +10,15 @@ sklearn = "*"
 pandas = "*"
 jupytext = "*"
 seaborn = "*"
-lightgbm = "*"
-xgboost = "*"
 pillow = "*"
-wordcloud = "*"
-catboost = "*"
 tqdm = "*"
 plotly = "*"
-nltk = "*"
-langdetect = "*"
-eli5 = "*"
 ipython = "*"
 sklearn-pandas = "*"
 ipykernel = "*"
-ascii-graph = "*"
-jinja2 = "*"
+tensorflow = "*"
+keras = "*"
+
 
 [requires]
 python_version = "3.6"
