--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ tqdm = "*"
 plotly = "*"
 ipython = "*"
 sklearn-pandas = "*"
+pandas-profiling = "*"
 ipykernel = "*"
 tensorflow = "*"
 keras = "*"
